[package]
name = "gatenative"
authors = ["Mateusz Szpakowski"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
description = "The library to execute natively Gate circuits."
repository = "https://github.com/matszpk/gatenative"
documentation = "https://docs.rs/gatenative"
keywords = ["gate", "logic", "circuit"]
categories = ["science", "mathematics"]

[dependencies]
thiserror = "1.0"
static_init = "1.0"
libloading = "0.8"
opencl3 = "0.9"
rayon = "1.0"
gatesim = { path="../gatesim", version="0.1.0" }
gate_calc_log_bits = { path="../gate_calc_log_bits", version="0.1.0" }
[dev-dependencies]
gateutil = { path="../gateutil", version="0.1.0" }
gategen = { path="../gategen", version="0.1.0" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
