[package]
name = "gatenative"
authors = ["Mateusz Szpakowski"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
description = "The library to execute natively Gate circuits."
repository = "https://github.com/matszpk/gatenative"
documentation = "https://docs.rs/gatenative"
keywords = ["gate", "logic", "circuit"]
categories = ["science", "mathematics"]

[[example]]
name = "cpu_example0"
path = "examples/cpu_example0.rs"

[[example]]
name = "cpu_example1"
path = "examples/cpu_example1.rs"

[[example]]
name = "cpu_example2"
path = "examples/cpu_example2.rs"

[[example]]
name = "cpu_example3"
path = "examples/cpu_example3.rs"

[[example]]
name = "cpu_example4"
path = "examples/cpu_example4.rs"

[[example]]
name = "cpu_example5"
path = "examples/cpu_example5.rs"

[[example]]
name = "cpu_example6"
path = "examples/cpu_example6.rs"

[[example]]
name = "cpu_example7"
path = "examples/cpu_example7.rs"

[[example]]
name = "opencl_example0"
path = "examples/opencl_example0.rs"

[[example]]
name = "opencl_example1"
path = "examples/opencl_example1.rs"

[[example]]
name = "opencl_example2"
path = "examples/opencl_example2.rs"

[[example]]
name = "opencl_example3"
path = "examples/opencl_example3.rs"

[[example]]
name = "opencl_example4"
path = "examples/opencl_example4.rs"

[[example]]
name = "opencl_example5"
path = "examples/opencl_example5.rs"

[[example]]
name = "opencl_example6"
path = "examples/opencl_example6.rs"

[[example]]
name = "opencl_example7"
path = "examples/opencl_example7.rs"

[dependencies]
thiserror = "1.0"
static_init = "1.0"
libloading = "0.8"
opencl3 = "0.9"
rayon = "1.0"
gatesim = { path="../gatesim", version="0.1.0" }
gate_calc_log_bits = { path="../gate_calc_log_bits", version="0.1.0" }
[dev-dependencies]
gateutil = { path="../gateutil", version="0.1.0" }
gategen = { path="../gategen", version="0.1.0" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
